sysyruntimelibrary-master/functional_test/06_var_defn_func.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/06_var_defn_func.sy:6:16: error: syntax error, unexpected R_PARENTHESIS
6|     int a=defn()
 |                 ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/06_var_defn_func.sy:0:0: error: not find main function
